# Universal-Turing-Machine-Simulator

./: .gitignore  CMakeLists.txt  README.md
utm-simulator/examples/: copy.tm  fast_loop.tm  increment.tm  loop.tm  palindrome.tm  parity.tm  real_loop.tm  simple_loop.tm
utm-simulator/src/: main.c  parser.c  parser.h  simulator.c  simulator.h  tape.c  tape.h  tm.c  tm.h
